# juliet-test-suite-c-cplusplus

./: .gitignore  Makefile  README.md  cwe-summary.txt  download-results.sh  manifest-original-cwe416.xml  manifest.generated-cwe415.xml  manifest.generated-cwe416.xml  manifest.generated-cwe476.xml  manifest.generated.xml  results-phasar-cwe-416.json  results-phasar.json  results-sonarqube-cwe415.json  results-sonarqube-cwe476.json  run-phasar.sh  run-sonarqube-build-CWE415.sh  run-sonarqube-build-CWE415_416.sh  run-sonarqube-download.sh  run-sonarqube.sh  score-phasar-cwe416.json  score-phasar.json  score-sonarqube-cwe415.json  score-sonarqube-cwe416-original-manifest.json  score-sonarqube-cwe416.json  score-sonarqube-cwe476.json  score-sonarqube.json  sonar-project.properties  timings.md
.github/workflows/: build.yml
ground-truth-generator/: Cargo.toml
ground-truth-generator/src/: main.rs
link-testcases/: Cargo.toml
link-testcases/src/: main.rs
score-evaluator/: Cargo.toml  score-sonarqube.json  score.json
score-evaluator/src/: ground_truth.rs  lib.rs  main.rs  score.rs
score-evaluator/src/formats/: mod.rs  sarif.rs  sonar.rs
score-evaluator/src/scanners/: mod.rs  sonar.rs
testcases/CWE415_Double_Free/s02/: CWE415_Double_Free__no_assignment_op_01_bad.cpp  CWE415_Double_Free__no_copy_const_01_bad.cpp
testcases/CWE416_Use_After_Free/: CWE416_Use_After_Free__operator_equals_01_bad.cpp
