[package]
name = "ground-truth-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
log = "0.4"
simplelog = "0.12"
score-evaluator = { path = "../score-evaluator" }
walkdir = "2.5"